@@ -161,6 +161,7 @@
 #define UWM_GETMENUTHEME     (WM_APP + 6)	// Message - returns a pointer to MenuTheme
 #define UWM_GETREBARTHEME    (WM_APP + 7)	// Message - returns a pointer to CToolBar
 #define UWM_GETTOOLBARTHEME  (WM_APP + 8)   // Message - returns a pointer to ToolBarTheme
+#define UWN_DRAWRBBKGND      (WM_APP + 9)	// Message - sent by rebar to parent to perform background drawing. Return TRUE if handled.
 //#define UWM_CLEANUPTEMPS	 (WM_APP + 9)	// Message - posted to cleanup temporary CDCs, CWnds etc.
 #define UWM_TBWINPOSCHANGING (WM_APP + 10)	// Message - Sent to parent. Toolbar is resizing
 #define UWN_BARSTART		 (WM_APP + 11)	// Notification - docker bar selected for move
