@@ -139,6 +139,7 @@ STDMETHODIMP CView::Execute(UINT32 nCmdID, UI_EXECUTIONVERB verb, const PROPERTY
 STDMETHODIMP CView::OnViewChanged(UINT32 viewId, UI_VIEWTYPE typeId, IUnknown* pView, UI_VIEWVERB verb, INT32 uReasonCode)
 {
 	UNREFERENCED_PARAMETER(viewId);
+	UNREFERENCED_PARAMETER(pView);
 	UNREFERENCED_PARAMETER(uReasonCode);
 
 	HRESULT hr = E_NOTIMPL;
