@@ -8,6 +8,9 @@ New Features and Enhancements
 * Added support for vertical rebars containing toolbars
    - Vertical rebars demonstrated in the rebar sample
 
+Changes in detail
+-----------------   
+Added CFrame::DrawReBarBkgnd   
 
 Version 7.5
 =============
